// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateDimensions > area chart > should generate dimensions for area with one measure 1`] = `
[
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
  {
    "itemIdentifiers": [],
  },
]
`;

exports[`generateDimensions > area chart > should generate dimensions for area with one measure and stack attribute 1`] = `
[
  {
    "itemIdentifiers": [
      "a1",
    ],
  },
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
]
`;

exports[`generateDimensions > area chart > should generate dimensions for area with one measure and view attribute 1`] = `
[
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
  {
    "itemIdentifiers": [
      "a1",
    ],
  },
]
`;

exports[`generateDimensions > area chart > should generate dimensions for area with one measure, two view attribute 1`] = `
[
  {
    "itemIdentifiers": [
      "a2",
    ],
  },
  {
    "itemIdentifiers": [
      "a1",
      "measureGroup",
    ],
  },
]
`;

exports[`generateDimensions > area chart > should generate dimensions for area with one measure, view attribute and stack attribute 1`] = `
[
  {
    "itemIdentifiers": [
      "a2",
    ],
  },
  {
    "itemIdentifiers": [
      "a1",
      "measureGroup",
    ],
  },
]
`;

exports[`generateDimensions > column/bar chart > should generate dimensions for one measure 1`] = `
[
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
  {
    "itemIdentifiers": [],
  },
]
`;

exports[`generateDimensions > column/bar chart > should generate dimensions for one measure 2`] = `
[
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
  {
    "itemIdentifiers": [],
  },
]
`;

exports[`generateDimensions > column/bar chart > should generate dimensions for one measure and stack attribute 1`] = `
[
  {
    "itemIdentifiers": [
      "a1",
    ],
  },
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
]
`;

exports[`generateDimensions > column/bar chart > should generate dimensions for one measure and stack attribute 2`] = `
[
  {
    "itemIdentifiers": [
      "a1",
    ],
  },
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
]
`;

exports[`generateDimensions > column/bar chart > should generate dimensions for one measure and view attribute 1`] = `
[
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
  {
    "itemIdentifiers": [
      "a1",
    ],
  },
]
`;

exports[`generateDimensions > column/bar chart > should generate dimensions for one measure and view attribute 2`] = `
[
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
  {
    "itemIdentifiers": [
      "a1",
    ],
  },
]
`;

exports[`generateDimensions > column/bar chart > should generate dimensions for one measure, view attribute and stack attribute 1`] = `
[
  {
    "itemIdentifiers": [
      "a2",
    ],
  },
  {
    "itemIdentifiers": [
      "a1",
      "measureGroup",
    ],
  },
]
`;

exports[`generateDimensions > column/bar chart > should generate dimensions for one measure, view attribute and stack attribute 2`] = `
[
  {
    "itemIdentifiers": [
      "a2",
    ],
  },
  {
    "itemIdentifiers": [
      "a1",
      "measureGroup",
    ],
  },
]
`;

exports[`generateDimensions > heatmap > should generate dimensions for one measure 1`] = `
[
  {
    "itemIdentifiers": [],
  },
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
]
`;

exports[`generateDimensions > heatmap > should generate dimensions for one measure and stack attribute 1`] = `
[
  {
    "itemIdentifiers": [],
  },
  {
    "itemIdentifiers": [
      "a1",
      "measureGroup",
    ],
  },
]
`;

exports[`generateDimensions > heatmap > should generate dimensions for one measure and view attribute 1`] = `
[
  {
    "itemIdentifiers": [
      "a1",
    ],
  },
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
]
`;

exports[`generateDimensions > heatmap > should generate dimensions for one measure, view attribute and stack attribute 1`] = `
[
  {
    "itemIdentifiers": [
      "a1",
    ],
  },
  {
    "itemIdentifiers": [
      "a2",
      "measureGroup",
    ],
  },
]
`;

exports[`generateDimensions > line chart > should generate dimensions for one measure 1`] = `
[
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
  {
    "itemIdentifiers": [],
  },
]
`;

exports[`generateDimensions > line chart > should generate dimensions for one measure and stack attribute 1`] = `
[
  {
    "itemIdentifiers": [
      "a1",
    ],
  },
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
]
`;

exports[`generateDimensions > line chart > should generate dimensions for one measure and view attribute 1`] = `
[
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
  {
    "itemIdentifiers": [
      "a1",
    ],
  },
]
`;

exports[`generateDimensions > line chart > should generate dimensions for one measure, view attribute and stack attribute 1`] = `
[
  {
    "itemIdentifiers": [
      "a2",
    ],
  },
  {
    "itemIdentifiers": [
      "a1",
      "measureGroup",
    ],
  },
]
`;

exports[`generateDimensions > pie chart > should generate dimensions for one measure 1`] = `
[
  {
    "itemIdentifiers": [],
  },
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
]
`;

exports[`generateDimensions > pie chart > should generate dimensions for one measure and 2 view attributes 1`] = `
[
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
  {
    "itemIdentifiers": [
      "a1",
      "a2",
    ],
  },
]
`;

exports[`generateDimensions > pie chart > should generate dimensions for one measure and view attribute 1`] = `
[
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
  {
    "itemIdentifiers": [
      "a1",
    ],
  },
]
`;

exports[`generateDimensions > pie chart > should generate dimensions for two measures 1`] = `
[
  {
    "itemIdentifiers": [],
  },
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
]
`;

exports[`generateDimensions > table > should generate dimensions for one attribute 1`] = `
[
  {
    "itemIdentifiers": [
      "a_label.product.id.name",
    ],
  },
  {
    "itemIdentifiers": [],
  },
]
`;

exports[`generateDimensions > table > should generate dimensions for one measure 1`] = `
[
  {
    "itemIdentifiers": [],
  },
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
]
`;

exports[`generateDimensions > table > should generate dimensions for one measure and 2 attributes 1`] = `
[
  {
    "itemIdentifiers": [
      "a1",
      "a2",
    ],
  },
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
]
`;

exports[`generateDimensions > table > should generate dimensions for one measure and attribute 1`] = `
[
  {
    "itemIdentifiers": [
      "a1",
    ],
  },
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
]
`;

exports[`generateDimensions > table > should generate dimensions for two measures 1`] = `
[
  {
    "itemIdentifiers": [],
  },
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
]
`;

exports[`generateDimensions > table > should generate dimensions with totals 1`] = `
[
  {
    "itemIdentifiers": [],
    "totals": [
      {
        "alias": "Sum",
        "attributeIdentifier": "a1",
        "measureIdentifier": "m1",
        "type": "sum",
      },
      {
        "attributeIdentifier": "a1",
        "measureIdentifier": "m2",
        "type": "sum",
      },
      {
        "attributeIdentifier": "a1",
        "measureIdentifier": "m1",
        "type": "nat",
      },
    ],
  },
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
]
`;

exports[`generateDimensions > treemap > should generate dimensions for one measure 1`] = `
[
  {
    "itemIdentifiers": [],
  },
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
]
`;

exports[`generateDimensions > treemap > should generate dimensions for one measure and view attribute 1`] = `
[
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
  {
    "itemIdentifiers": [
      "a1",
    ],
  },
]
`;

exports[`generateDimensions > treemap > should generate dimensions for two measures 1`] = `
[
  {
    "itemIdentifiers": [],
  },
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
]
`;

exports[`generateStackedDimensions > measure and stack by only 1`] = `
[
  {
    "itemIdentifiers": [
      "a2",
    ],
  },
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
]
`;

exports[`generateStackedDimensions > should return 2 attributes along with measureGroup 1`] = `
[
  {
    "itemIdentifiers": [],
  },
  {
    "itemIdentifiers": [
      "a1",
      "a2",
      "measureGroup",
    ],
  },
]
`;

exports[`generateStackedDimensions > should return 2 attributes along with measureGroup and return 1 stack attribute 1`] = `
[
  {
    "itemIdentifiers": [
      "a2",
    ],
  },
  {
    "itemIdentifiers": [
      "a1",
      "a3",
      "measureGroup",
    ],
  },
]
`;

exports[`getHeadlinesDimensions > should always return just one dimension with a measureGroup 1`] = `
[
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
  },
]
`;

exports[`getPivotTableDimensions > should return row attributes in the first dimensions, column attributes and measureGroup in second dimension 1`] = `
[
  {
    "itemIdentifiers": [
      "a1",
    ],
  },
  {
    "itemIdentifiers": [
      "a2",
      "measureGroup",
    ],
  },
]
`;
